# BankManagementSystem

./: LICENSE  README.md
Client/: CMakeLists.txt  main.c
Server/: ODBC.dsn  main.py
